Add hotel listing, order and filter.

--- a/src/app/components/articles/articles-listing/articles-listing.component.html
+++ b/src/app/components/articles/articles-listing/articles-listing.component.html
@@ -1,3 +1,4 @@
+<button onclick="scriptCall()" id="scriptCall" style="display: none"></button>
 <div id="titlebar" class="gradient">
     <div class="container">
         <div class="row">
@@ -78,7 +79,6 @@
                     </p>
                 </div>
             </div>
-            <button id="y"></button>
             <div class="col-lg-3 col-md-4">
                 <div class="sidebar right">
                     <div class="widget">
