--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
                             <a [routerLink]="['restaurants']" [routerLinkActive]="['current']">Restaurants</a>
                         </li>
                         <li>
-                            <a [routerLink]="['a']" [routerLinkActive]="['current']">Hotels</a>
+                            <a [routerLink]="['hotels']" [routerLinkActive]="['current']">Hotels</a>
                         </li>
                         <li>
                             <a [routerLink]="['articles']" [routerLinkActive]="['current']">Articles</a>
